--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="TileEditorApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ManagedSimpleObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SimpleEngineControls.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TileEditorApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ManagedSimpleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
