--- a/SimpleEngineControls/SimpleEngineControls.vcxproj
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj
@@ -98,6 +98,9 @@
       <DelayLoadDLLs>DevIL.dll;%(DelayLoadDLLs)</DelayLoadDLLs>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /E /Y "$(ProjectDir)media" "$(TargetDir)media\"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
