--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="ManagedSimpleObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TileMapControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SimpleEngineControls.cpp">
