+Added TileMapControl +Binded TileMapControl when nothing else is selected

--- a/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="ManagedSimpleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TileMapControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
