added tiles grid

--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -130,6 +130,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Infrastructure\Command.cs" />
+    <Compile Include="Model\Tile.cs" />
     <Compile Include="ViewModel\PaintViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
