--- a/SimpleEngineControls/SimpleEngineControls.vcxproj
+++ b/SimpleEngineControls/SimpleEngineControls.vcxproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="ManagedSimpleLayer.cpp" />
     <ClCompile Include="ManagedSimpleObject.cpp" />
     <ClCompile Include="TileEditorApp.cpp" />
     <ClCompile Include="SimpleEngineControls.cpp" />
