--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClInclude Include="Include\SimpleSpriteSheetRenderer.h">
       <Filter>Engine\Graphics\Sprites</Filter>
     </ClInclude>
+    <ClInclude Include="Include\SimpleID.h">
+      <Filter>Engine\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\SimpleObjectsRenderPass.cpp">
