--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -220,6 +220,9 @@
     <ClCompile Include="Src\SimpleSpriteSheetRenderer.cpp">
       <Filter>Engine\Graphics\Sprites</Filter>
     </ClCompile>
+    <ClCompile Include="Src\SimpleID.cpp">
+      <Filter>Engine\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Src\shaders\SimpleColorShader.frag">
