--- a/SimpleEngine/SimpleEngine.vcxproj.filters
+++ b/SimpleEngine/SimpleEngine.vcxproj.filters
@@ -146,6 +146,9 @@
     <ClInclude Include="Include\SimpleID.h">
       <Filter>Engine\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Include\json.hpp">
+      <Filter>Engine\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\SimpleObjectsRenderPass.cpp">
